objects/Collections_Pass_Strategy__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Some code in the SkipTraceController is dependent upon there being records in this CustomSetting with Sort = 3, 4, 6 and 8.  It is best to simply have values for 1-11.  Before changing, check the code for the TFSC_SkipTrace page.</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesReviewedTo__c</fullName>
        <label>NotesReviewedTo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RES__c</fullName>
        <label>RES#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Note__c</fullName>
        <label>Standard Note</label>
        <type>TextArea</type>
    </fields>
    <label>Collections Pass Strategy</label>
</CustomObject>